Corrige meta tags para preview no zap e discord

--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>meu-guia-robinhood</title>
+    <!-- Primary Meta Tags -->
+    <title>Guia Airdrop: Robinhood Testnet | Mercurius Crypto</title>
+    <meta name="title" content="Guia de Interação: Robinhood Testnet">
+    <meta name="description" content="Passo a passo completo e gratuito para interagir na testnet da Robinhood e se posicionar para o possível airdrop.">
+    <meta name="theme-color" content="#D2FF00">
+    <link rel="icon" href="https://i.imgur.com/QAqVuyN.png" />
+
+    <!-- Open Graph / Facebook / WhatsApp -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mercurius-robinhood.vercel.app/">
+    <meta property="og:title" content="Guia de Interação: Robinhood Testnet">
+    <meta property="og:description" content="Passo a passo completo e gratuito para interagir na testnet da Robinhood e se posicionar para o possível airdrop.">
+    <meta property="og:image" content="https://i.imgur.com/QAqVuyN.png">
+
+    <!-- Twitter / Discord -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mercurius-robinhood.vercel.app/">
+    <meta property="twitter:title" content="Guia de Interação: Robinhood Testnet">
+    <meta property="twitter:description" content="Passo a passo completo e gratuito para interagir na testnet da Robinhood e se posicionar para o possível airdrop.">
+    <meta property="twitter:image" content="https://i.imgur.com/QAqVuyN.png">
   </head>
   <body>
     <div id="root"></div>
