Adiciona botao do minerador de sepolia na fase 1

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <meta property="og:title" content="Mercurius | Robinhood Testnet">
     <meta property="og:description" content="Passo a passo completo e gratuito para interagir na testnet da Robinhood e se posicionar para o possível airdrop.">
     <!-- Usando a logo horizontal maior para os previews de redes sociais -->
-    <meta property="og:image" content="https://i.imgur.com/QAqVuyN.png">
+    <meta property="og:image" content="https://i.imgur.com/8D291bB.png">
 
     <!-- Twitter / Discord (Preview de Link) -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://mercurius-robinhood.vercel.app/">
     <meta property="twitter:title" content="Mercurius | Robinhood Testnet">
     <meta property="twitter:description" content="Passo a passo completo e gratuito para interagir na testnet da Robinhood e se posicionar para o possível airdrop.">
-    <meta property="twitter:image" content="https://i.imgur.com/QAqVuyN.png">
+    <meta property="twitter:image" content="https://i.imgur.com/8D291bB.png">
   </head>
   <body>
     <div id="root"></div>
